--- a/index.html
+++ b/index.html
@@ -1666,6 +1666,7 @@
             </div>
           </div>
         </div>
+
       </footer>
       <!--Site Footer End-->
     </div>
@@ -1736,6 +1737,8 @@
     <a href="#" data-target="html" class="scroll-to-target scroll-to-top"
       ><i class="icon-right-arrow"></i
     ></a>
+
+    <a href="https://wa.me/+919209543850?text=Hi" target="_blank"><img src="/assets/images/whatsapp.png" class="whatsapp lazyloaded"> </a>
 
     <script src="assets/vendors/jquery/jquery-3.6.0.min.js"></script>
     <script src="assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
