--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           <a href="tel:+919209543850">+91 9209543850</a>
         </div>
         <div class="main-slider__mail">
-          <a href="mailto:info@digitalvap.com">info@digitalvap.com</a>
+          <a href="mailto:digitalvap16@gmail.com">digitalvap16@gmail.com</a>
         </div>
         <div
           class="main-slider__carousel owl-carousel owl-theme thm-owl__carousel"
@@ -857,13 +857,13 @@
                         <a href="#"><i class="fab fa-twitter"></i></a>
                       </li>
                       <li>
-                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/people/Digitalvap/61570151444248"><i class="fab fa-facebook"></i></a>
                       </li>
                       <li>
                         <a href="#"><i class="fab fa-pinterest-p"></i></a>
                       </li>
                       <li>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/digital_vap/" target="_blank"><i class="fab fa-instagram"></i></a>
                       </li>
                     </ul>
                   </div>
@@ -898,13 +898,13 @@
                         <a href="#"><i class="fab fa-twitter"></i></a>
                       </li>
                       <li>
-                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/people/Digitalvap/61570151444248"><i class="fab fa-facebook"></i></a>
                       </li>
                       <li>
                         <a href="#"><i class="fab fa-pinterest-p"></i></a>
                       </li>
                       <li>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/digital_vap/" target="_blank"><i class="fab fa-instagram"></i></a>
                       </li>
                     </ul>
                   </div>
@@ -939,13 +939,13 @@
                         <a href="#"><i class="fab fa-twitter"></i></a>
                       </li>
                       <li>
-                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/people/Digitalvap/61570151444248"><i class="fab fa-facebook"></i></a>
                       </li>
                       <li>
                         <a href="#"><i class="fab fa-pinterest-p"></i></a>
                       </li>
                       <li>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/digital_vap/" target="_blank"><i class="fab fa-instagram"></i></a>
                       </li>
                     </ul>
                   </div>
@@ -1578,8 +1578,8 @@
                   <ul class="footer-widget__Contact-list list-unstyled">
                     <li>
                       <p>
-                        <a href="mailto:info@digitalvap.com"
-                          >info@digitalvap.com</a
+                        <a href="mailto:digitalvap16@gmail.com"
+                          >digitalvap16@gmail.com</a
                         >
                       </p>
                     </li>
@@ -1640,7 +1640,7 @@
                   </form>
                   <div class="mc-form__response"></div>
                   <div class="site-footer__social">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/people/Digitalvap/61570151444248"><i class="fab fa-facebook"></i></a>
 
                     <a
                       href="https://www.instagram.com/digital_vap/"
@@ -1692,7 +1692,7 @@
         <ul class="mobile-nav__contact list-unstyled">
           <li>
             <i class="fa fa-envelope"></i>
-            <a href="mailto:needhelp@packageName__.com">info@digitalvap.com</a>
+            <a href="mailto:needhelp@packageName__.com">digitalvap16@gmail.com</a>
           </li>
           <li>
             <i class="fa fa-phone-alt"></i>
@@ -1738,7 +1738,7 @@
       ><i class="icon-right-arrow"></i
     ></a>
 
-    <a href="https://wa.me/+919209543850?text=Hi" target="_blank"><img src="/assets/images/whatsapp.png" class="whatsapp lazyloaded"> </a>
+    <a href="https://wa.me/919209543850?text=Hi%20DigitalVap%2C%20I%27m%20interested%20in%20your%20services.%20Please%20share%20details%20about%20Website%20Development%2C%20Digital%20Marketing%2C%20or%20Graphic%20Designing." target="_blank"><img src="/assets/images/whatsapp.png" class="whatsapp lazyloaded"> </a>
 
     <script src="assets/vendors/jquery/jquery-3.6.0.min.js"></script>
     <script src="assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
