--- a/business-website.html
+++ b/business-website.html
@@ -446,8 +446,8 @@
                   <ul class="footer-widget__Contact-list list-unstyled">
                     <li>
                       <p>
-                        <a href="mailto:info@digitalvap.com"
-                          >info@digitalvap.com</a
+                        <a href="mailto:digitalvap16@gmail.com"
+                          >digitalvap16@gmail.com</a
                         >
                       </p>
                     </li>
@@ -508,7 +508,7 @@
                   </form>
                   <div class="mc-form__response"></div>
                   <div class="site-footer__social">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/people/Digitalvap/61570151444248"><i class="fab fa-facebook"></i></a>
 
                     <a
                       href="https://www.instagram.com/digital_vap/"
@@ -559,7 +559,7 @@
         <ul class="mobile-nav__contact list-unstyled">
           <li>
             <i class="fa fa-envelope"></i>
-            <a href="mailto:needhelp@packageName__.com">info@digitalvap.com</a>
+            <a href="mailto:needhelp@packageName__.com">digitalvap16@gmail.com</a>
           </li>
           <li>
             <i class="fa fa-phone-alt"></i>
@@ -569,7 +569,7 @@
         <!-- /.mobile-nav__contact -->
         <div class="mobile-nav__top">
           <div class="mobile-nav__social">
-            <a href="#" class="fab fa-facebook-square"></a>
+            <a href="https://www.facebook.com/people/Digitalvap/61570151444248" class="fab fa-facebook-square"></a>
 
             <a
               href="https://www.instagram.com/digital_vap/"
@@ -604,6 +604,9 @@
     <a href="#" data-target="html" class="scroll-to-target scroll-to-top"
       ><i class="icon-right-arrow"></i
     ></a>
+
+    <a href="https://wa.me/919209543850?text=Hi%20DigitalVap%2C%20I%27m%20interested%20in%20your%20services.%20Please%20share%20details%20about%20Website%20Development%2C%20Digital%20Marketing%2C%20or%20Graphic%20Designing." target="_blank"><img src="/assets/images/whatsapp.png" class="whatsapp lazyloaded"> </a>
+
 
     <script src="assets/vendors/jquery/jquery-3.6.0.min.js"></script>
     <script src="assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
